[gd_scene load_steps=15 format=3 uid="uid://hejet005bghe"]

[ext_resource type="Script" path="res://frontend/gui.gd" id="1_evr6w"]
[ext_resource type="Texture2D" uid="uid://kgx55fghcksa" path="res://frontend/props/heart_icon.png" id="1_xkjt8"]
[ext_resource type="PackedScene" uid="uid://c25tmamt1h5wh" path="res://frontend/equipment_menu.tscn" id="2_jrruo"]
[ext_resource type="FontFile" uid="uid://bu5bpxl6utbrq" path="res://frontend/props/Minecraft.ttf" id="2_k5rcu"]
[ext_resource type="Theme" uid="uid://rgabw4lp5pa1" path="res://frontend/props/health_bar_theme.tres" id="3_vhrec"]
[ext_resource type="Texture2D" uid="uid://cdwc5k4ioj0x6" path="res://frontend/props/coin_icon.png" id="4_ln1ic"]
[ext_resource type="PackedScene" uid="uid://bxdopdhlbkuxo" path="res://frontend/experience_bar.tscn" id="5_c8ild"]
[ext_resource type="PackedScene" uid="uid://b3f14od178ap1" path="res://frontend/inventory.tscn" id="6_mjm6w"]
[ext_resource type="PackedScene" uid="uid://xcvldta1mh2" path="res://backend/logger.tscn" id="8_i35ix"]

[sub_resource type="LabelSettings" id="LabelSettings_m1x7l"]
font = ExtResource("2_k5rcu")
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(0.45098, 0.721569, 0.960784, 1)

[sub_resource type="LabelSettings" id="LabelSettings_51r5h"]
font = ExtResource("2_k5rcu")
font_color = Color(0, 0, 0, 1)
outline_size = 4

[sub_resource type="Theme" id="Theme_w8dxf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d202l"]
bg_color = Color(0.6, 0.6, 0.6, 0.580392)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0nt8"]
bg_color = Color(0.854902, 0.494118, 0.282353, 1)

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 24.0
offset_bottom = 25.0
scale = Vector2(5.72131, 5.72131)
script = ExtResource("1_evr6w")

[node name="EquipmentMenu" parent="." instance=ExtResource("2_jrruo")]
visible = false
position = Vector2(173.911, 85.6447)
scale = Vector2(0.253983, 0.253983)

[node name="Heart" type="Sprite2D" parent="."]
position = Vector2(14.3467, 10.3554)
scale = Vector2(0.121992, 0.121992)
texture = ExtResource("1_xkjt8")

[node name="LifeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 22.7364
offset_top = 4.76233
offset_right = 60.7364
offset_bottom = 39.7623
scale = Vector2(0.413409, 0.413409)
text = "00
"
label_settings = SubResource("LabelSettings_m1x7l")
vertical_alignment = 1

[node name="Gold" type="Sprite2D" parent="."]
position = Vector2(14.1576, 23.7708)
scale = Vector2(0.136719, 0.136719)
texture = ExtResource("4_ln1ic")

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 22.7364
offset_top = 19.8732
offset_right = 60.7364
offset_bottom = 54.8732
scale = Vector2(0.413, 0.413)
text = "00
"
label_settings = SubResource("LabelSettings_m1x7l")

[node name="TurnLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 92.2865
offset_top = 6.9914
offset_right = 251.287
offset_bottom = 29.9914
scale = Vector2(0.83788, 0.83788)
text = "Comienza el turno: 0"
label_settings = SubResource("LabelSettings_51r5h")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 8.38968
offset_top = 40.5501
offset_right = 84.3897
offset_bottom = 65.5501
scale = Vector2(0.585754, 0.585754)
theme = ExtResource("3_vhrec")
text = "Avanzar"

[node name="Reiniciar" type="Button" parent="."]
layout_mode = 0
offset_left = 8.38968
offset_top = 60.1261
offset_right = 85.3897
offset_bottom = 85.1261
scale = Vector2(0.579674, 0.579674)
theme = ExtResource("3_vhrec")
text = "Reiniciar"

[node name="ExperienceBar" parent="." instance=ExtResource("5_c8ild")]
layout_mode = 0
offset_left = 30.0
offset_top = 163.0
offset_right = 1054.0
offset_bottom = 227.0
theme = SubResource("Theme_w8dxf")
theme_override_styles/background = SubResource("StyleBoxFlat_d202l")
theme_override_styles/fill = SubResource("StyleBoxFlat_s0nt8")

[node name="Inventory" parent="." instance=ExtResource("6_mjm6w")]
position = Vector2(267, 12.5845)
scale = Vector2(0.724567, 0.724567)

[node name="Equipamiento" type="Button" parent="."]
layout_mode = 0
offset_left = 8.38968
offset_top = 79.702
offset_right = 67.3897
offset_bottom = 103.702
scale = Vector2(0.58, 0.58)
theme = ExtResource("3_vhrec")
text = "Equipamiento"

[node name="Logger" parent="." instance=ExtResource("8_i35ix")]

[connection signal="pressed" from="Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="Equipamiento" to="." method="_on_equipamiento_pressed"]
